--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Alurabook</h1>
+        <head class="cabeçalho">
+            <span class="cabeçalho__menu-hamburguer"></span>
+            <img src="Logo.svg" alt="logo a AluraBooks">
+            <a href="#"><img src="Favoritos.svg" alt="Meus Favoritos"></a>
+            <a href="#"><img src="Compras.svg" alt="Carrinhos de Compras"></a>
+            <a href="#"><img src="Usuário.svg" alt="Meu Perfil"></a>
+        </head>
     </body>
 </html>
