--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 
     <body>
         <head class="cabeçalho">
-            <span class="cabeçalho__menu-hamburguer"></span>
-            <img src="Logo.svg" alt="logo a AluraBooks">
-            <a href="#"><img src="Favoritos.svg" alt="Meus Favoritos"></a>
-            <a href="#"><img src="Compras.svg" alt="Carrinhos de Compras"></a>
-            <a href="#"><img src="Usuário.svg" alt="Meu Perfil"></a>
+            <div class="container">
+            <span class="cabeçalho__menu-hamburguer conteiner__imagem"></span>
+            <img src="Logo.svg" alt="logo a AluraBooks " class="conteiner__imagem">
+        </div>
+        <div class="container">
+            <a href="#"><img src="Favoritos.svg" alt="Meus Favoritos" class="conteiner__imagem"></a>
+            <a href="#"><img src="Compras.svg" alt="Carrinhos de Compras" class="conteiner__imagem"></a>
+            <a href="#"><img src="Usuário.svg" alt="Meu Perfil" class="conteiner__imagem"></a>
+        </div>
         </head>
     </body>
 </html>
