--- a/index.html
+++ b/index.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 <html>
-                                                                                                                                                                                                                                                                                                              
-    <head>
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
-    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
-    </head>
+    <link rel="stylesheet" href="reset.css">
+</head>
 
-    <body>
-        <head class="cabeçalho">
-            <div class="container">
-            <span class="cabeçalho__menu-hamburguer conteiner__imagem"></span>
-            <img src="Logo.svg" alt="logo a AluraBooks " class="conteiner__imagem">
-        </div>
-        <div class="container">
-            <a href="#"><img src="Favoritos.svg" alt="Meus Favoritos" class="conteiner__imagem"></a>
-            <a href="#"><img src="Compras.svg" alt="Carrinhos de Compras" class="conteiner__imagem"></a>
-            <a href="#"><img src="Usuário.svg" alt="Meu Perfil" class="conteiner__imagem"></a>
-        </div>
-        </head>
-    </body>
+<body>
+    <h1>Alurabook</h1>
+
+</body>
+
 </html>
