--- a/index.html
+++ b/index.html
@@ -10,8 +10,19 @@
 </head>
 
 <body>
-    <h1>Alurabook</h1>
+   <header class="cabeçalho">
 
+    <span class="cabeçalho__menu-hamburguer"></span>
+
+    <img src="img/Logo.svg" alt="Logo da AluraBooks">
+
+    <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos"></a>
+
+<a href="#"><img src="img/Compras.svg" alt="Carrinho de Compras"></a>
+
+<a href="#"><img src="img/Usuário.svg" alt="Meu perfil"></a>
+
+   </header>
 </body>
 
 </html>
