--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
 </head>
 
@@ -17,12 +20,38 @@
     <input type="checkbox" id="menu" class="container__botao">
     <label for="menu">
      <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+
     </label>
+
     <ul class="lista-menu">
         <li class="lista-menu__titulo">Categorias</li>
-    </ul>
+
+        <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Programaçao</a></li>
+   
+      
+
+    <li class="lista-menu__item">
+        <a href="#" class="lista-menu__link">Front-end</a></li>
+
+
+<li class="lista-menu__item">
+    <a href="#" class="lista-menu__link">Infraestrutura</a></li>
+
+
+<li class="lista-menu__item">
+    <a href="#" class="lista-menu__link">Business</a></li>
+
+
+<li class="lista-menu__item">
+    <a href="#" class="lista-menu__link">Deing & UX</a></li>
+    
+</ul>
+
      <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+
   </div>
+
   <div class="container">
      <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos" class="container__imagem"></a>
 
@@ -31,6 +60,7 @@
      <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
  </div>
    </header>
+   <section class="banner"></section>
 </body>
 
 </html>
