--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
     <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
     <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
    </section>
+   <Section class="carrossel">
+    <h2 class="carrossel__titulo">Novos Lançamentos</h2>
+   </Section>
 </body>
 
 </html>
